fixed z-index for .header__submenu

--- a/src/blocks/header/header.scss
+++ b/src/blocks/header/header.scss
@@ -96,7 +96,7 @@
               padding: 10px 20px;
               right: 0;
               border-width: 0 1px 1px 1px;
-              z-index: 1;
+              z-index: 5;
               display: none;
 
               .header__submenu-li {
